--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop2.7.4-java8
     container_name: resourcemanager
     restart: always
+    ports:
+    - 8088:8088
     environment:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075"
     env_file:
